# hanji

./: .env  README.md  pyproject.toml  settings.gradle.kts  test.puml
alembic/: env.py
app/: build.gradle.kts
app/schemas/com.dev.hanji.data.database.AppDatabase/: 1.json  2.json  3.json
app/schemas/com.dev.hanji.database.AppDatabase/: 1.json
app/src/androidTest/java/com/dev/hanji/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: kanji.json
app/src/main/assets/databases/: bk1_hanji_database.db  hanji_database.db
app/src/main/java/com/dev/hanji/: DrawingViewModel.kt  HanjiActivity.kt  HanjiDestinations.kt  (+2 more)
app/src/main/res/drawable/: _0003f.xml  _0004b.xml  _0004d.xml  _0004e.xml  _0004f.xml  _002c.xml  _002e.xml  _003a.xml  _003b.xml  _004a.xml  _004c.xml  _02e89.xml  _02e8d.xml  _02e95.xml  _02ea2.xml  _02ea8.xml  _02ead.xml  _02ecc.xml  _02ecf.xml  _02ed6.xml  _04e00.xml  _04e01.xml  _04e03.xml  _04e07.xml  _04e08.xml  _04e0a.xml  _04e0b.xml  _04e0d.xml  _04e0e.xml  _04e10.xml  _04e11.xml  _04e14.xml  _04e15.xml  _04e16.xml  _04e18.xml  _04e26.xml  _04e28.xml  _04e2d.xml  _04e38.xml  _04e3b.xml  (+2409 more)
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: couchdb.py  database.py  main.py  settings.py  test_main.py
src/celery_check/: celery_check_test.py  celery_tasks.py
src/kanji/: models.py  schemas.py
src/user_session/: config.py  manager.py  models.py  services.py  utils.py
src/users/: manager.py  models.py  router.py  services.py
(+142 files in other folders)
